--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "hono": "^4.7.5",
+    "nanoid": "^5.1.5",
     "pg": "^8.14.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.11",
     "drizzle-kit": "^0.30.6",
