--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "dependencies": {
     "@hono/node-server": "^1.14.0",
     "bcryptjs": "^3.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "hono": "^4.7.5",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
     "pg": "^8.14.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.11",
