--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
     "pg": "^8.14.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.11",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.30.6",
     "tsx": "^4.19.3"
   }
