--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hono": "^4.7.5",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
+    "otplib": "^12.0.1",
     "pg": "^8.14.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
