--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.0",
+    "@types/handlebars": "^4.1.0",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "handlebars": "^4.7.8",
     "hono": "^4.7.5",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
+    "nodemailer": "^6.10.1",
     "otplib": "^12.0.1",
     "pg": "^8.14.1",
     "uuid": "^11.1.0",
