more on backend

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "back-end",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
-  },
+    "dev": "tsx watch src/index.ts",
+    "build":"tsc"
+
+},
   "dependencies": {
     "@hono/node-server": "^1.14.0",
     "@types/handlebars": "^4.1.0",
