--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build":"tsc"
-
-},
+    "start": "node dist/index.js",
+    "build": "tsc"
+  },
   "dependencies": {
-    "@hono/node-server": "^1.14.0",
-    "@types/handlebars": "^4.1.0",
-    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
@@ -25,6 +22,9 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.14.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/handlebars": "^4.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.9",
@@ -33,6 +33,7 @@
     "@types/pg": "^8.11.11",
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.30.6",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   }
 }
