--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@hono/node-server": "^1.14.0",
+    "@neondatabase/serverless": "^1.0.0",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
-    "@hono/node-server": "^1.14.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.42.0",
     "handlebars": "^4.7.8",
     "hono": "^4.7.5",
     "jsonwebtoken": "^9.0.2",
@@ -23,13 +24,11 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.17",
-    "@types/handlebars": "^4.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/nanoid": "^3.0.0",
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.30.6",
